// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescribeElementCard renders correct snapshot 1`] = `
<WithStyles(Grid)
  item={true}
  md={4}
  sm={6}
  xs={12}
>
  <WithStyles(Card)
    className="DescribeElementCard-shadedCard-2"
    square={true}
  >
    <div
      className="DescribeElementCard-cardContent-3"
    >
      <WithStyles(DescribeElementCardBanner)
        icon="people"
        key="card-banner"
        title="expectedTitle"
      />
      <WithStyles(DescribeElementCardBody)
        content="expectedContent"
        key="card-body"
      />
    </div>
  </WithStyles(Card)>
</WithStyles(Grid)>
`;

exports[`DescribeElementCard renders correct snapshot with switches 1`] = `
<WithStyles(Grid)
  item={true}
  md={4}
  sm={6}
  xs={12}
>
  <WithStyles(Card)
    className="DescribeElementCard-card-1"
    square={true}
  >
    <div
      className="DescribeElementCard-cardContent-3"
    >
      <WithStyles(DescribeElementCardBody)
        content="moreContent"
        key="card-body"
        media={true}
        quote={true}
      />
      <WithStyles(DescribeElementCardBanner)
        key="card-banner"
        quote={true}
        title="expectedTitle"
      />
      <DescribeElementCardLinks
        key="card-links"
        links={
          Array [
            Object {
              "displayName": "displayName",
              "href": "address",
            },
          ]
        }
      />
    </div>
  </WithStyles(Card)>
</WithStyles(Grid)>
`;
